mise à jour index.html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <meta name="author" content="Imad Kaanane" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <title>Modèle de page complète</title>
+  <title>Réservia</title>
   
   <!-- Icône de l'onglet dans le navigateur -->
-  <link rel="icon" type="image/jpg" href="images/favicon.jpg" />
+  <link rel="icon" type="image/jpg" href="images/logo/Reservia.svg" />
   
   <!-- Les librairies à toujours appeler avant nos feuilles de styles perso -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
