--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- Main ****************************************************************************-->
   <main>
     <section class="search_filter">
-      <h2>Trouvez votre hébergement pour des vacances de rêve</h2>  
+      <h1>Trouvez votre hébergement pour des vacances de rêve</h1>  
       <p>en plein centre ville ou en plein nature</p> 
       <div class="localisation">
           <div class="icon_map"><i class="fas fa-map-marker-alt"></i></div>
@@ -77,7 +77,7 @@
               </div>
               <div class="card_info_lodging">
                 <h3 class="card_title_lodging">Auberge de la cannebière</h3>
-                <p class="card_text_lodging">Nuit à partir de 25</p>
+                <p class="card_text_lodging">Nuit à partir de <span class="price">25€</span></p>
                 <div class="star">
                   <i class="fas fa-star star_blue"></i>
                   <i class="fas fa-star star_blue"></i>
@@ -94,7 +94,7 @@
               </div>
               <div class="card_info_lodging">
                 <h3 class="card_title_lodging">Hôtel du Port</h3>
-                <p class="card_text_lodging">Nuit à partir de 52</p>
+                <p class="card_text_lodging">Nuit à partir de <span class="price">52€</span></p>
                 <div class="star">
                   <i class="fas fa-star star_blue"></i>
                   <i class="fas fa-star star_blue"></i>
@@ -111,7 +111,7 @@
               </div>
               <div class="card_info_lodging">
                 <h3 class="card_title_lodging">Hôtel des Mouettes</h3>
-                <p class="card_text_lodging">Nuit à partir de 76</p>
+                <p class="card_text_lodging">Nuit à partir de <span class="price">76€</span></p>
                 <div class="star">
                   <i class="fas fa-star star_blue"></i>
                   <i class="fas fa-star star_blue"></i>
@@ -128,7 +128,7 @@
               </div>
               <div class="card_info_lodging">
                 <h3 class="card_title_lodging">Hôtel de la mer</h3>
-                <p class="card_text_lodging">Nuit à partir de 46</p>
+                <p class="card_text_lodging">Nuit à partir de <span class="price">46€</span></p>
                 <div class="star">
                   <i class="fas fa-star star_blue"></i>
                   <i class="fas fa-star star_blue"></i>
@@ -145,7 +145,7 @@
               </div>
               <div class="card_info_lodging">
                 <h3 class="card_title_lodging">Auberge Le Panier</h3>
-                <p class="card_text_lodging">Nuit à partir de 23</p>
+                <p class="card_text_lodging">Nuit à partir de <span class="price">23€</span></p>
                 <div class="star">
                   <i class="fas fa-star star_blue"></i>
                   <i class="fas fa-star star_blue"></i>
@@ -162,7 +162,7 @@
               </div>
               <div class="card_info_lodging">
                 <h3 class="card_title_lodging">Hôtel chez Amina</h3>
-                <p class="card_text_lodging">Nuit à partir de 96</p>
+                <p class="card_text_lodging">Nuit à partir de <span class="price">96€</span></p>
                 <div class="star">
                   <i class="fas fa-star star_blue"></i>
                   <i class="fas fa-star star_blue"></i>
@@ -189,7 +189,7 @@
               <div class="card_info_popular">
                 <div>
                   <h3 class="card_title_popular">Hôtel Le soleil du matin</h3>
-                  <p class="card_text_popular">Nuit à partir de 128</p>
+                  <p class="card_text_popular">Nuit à partir de <span class="price">128€</span></p>
                 </div>
                 <div class="star">
                   <i class="fas fa-star star_blue"></i>
@@ -207,8 +207,8 @@
               </div>
               <div class="card_info_popular">
                 <div>
-                  <h3 class="card_title_popular">Hôtel Le soleil du matin</h3>
-                  <p class="card_text_popular">Nuit à partir de 128</p>
+                  <h3 class="card_title_popular">Au coeur de j'eau Chambres d'hôtes</h3>
+                  <p class="card_text_popular">Nuit à partir de <span class="price">71€</span></p>
                 </div>
                 <div class="star">
                   <i class="fas fa-star star_blue"></i>
@@ -226,8 +226,8 @@
               </div>
               <div class="card_info_popular">
                 <div>
-                  <h3 class="card_title_popular">Hôtel Le soleil du matin</h3>
-                  <p class="card_text_popular">Nuit à partir de 128</p>
+                  <h3 class="card_title_popular">Hôtel Tout bleu et Blanc</h3>
+                  <p class="card_text_popular">Nuit à partir de <span class="price">68€</span></p>
                 </div>
                 <div class="star">
                   <i class="fas fa-star star_blue"></i>
