--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
               </div>
               <div class="card_info_popular">
                 <div>
-                  <h3 class="card_title_popular">Au coeur de j'eau Chambres d'hôtes</h3>
+                  <h3 class="card_title_popular">Au coeur de l'eau Chambres d'hôtes</h3>
                   <p class="card_text_popular">Nuit à partir de <span class="price">71€</span></p>
                 </div>
                 <div class="star">
