--- a/index.html
+++ b/index.html
@@ -26,15 +26,17 @@
 <body>
   <!-- HEADER ************************************************************************ -->
   <header>
-    <a href="#" class="brand"><img src="images/logo/Reservia.svg" alt=""></a>
-    <nav class="navbar">
-      <ul class="navbar_nav">
-        <li class="nav_item active"><a class="nav_link active" href="#lodging"> Hébergements </a></li>
-        <li class="nav_item"><a class="nav_link" href="#activity" > Activités </a></li>
-      </ul>
-    </nav>
-    <div id="auth_container">
-        <a href="">S'inscrire</a>
+    <div class="header">
+      <a href="#" class="brand"><img src="images/logo/Reservia.svg" alt=""></a>
+      <nav class="navbar">
+        <ul class="navbar_nav">
+          <li class="nav_item active"><a class="nav_link active" href="#lodging"> Hébergements </a></li>
+          <li class="nav_item"><a class="nav_link" href="#activity" > Activités </a></li>
+        </ul>
+      </nav>
+      <div id="auth_container">
+          <a href="">S'inscrire</a>
+      </div>
     </div>	 
   </header>
   <!-- Main ****************************************************************************-->
