--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               </div>
               <div class="card_info_lodging">
                 <h3 class="card_title_lodging">Hôtel du Port</h3>
-                <p class="card_text_lodging">Nuit à partir de <span class="price">52€</span></p>
+                <p class="card_text_lodging">Nuit à partir de 52<span class="price">€</span></p>
                 <div class="star">
                   <i class="fas fa-star star_blue"></i>
                   <i class="fas fa-star star_blue"></i>
@@ -113,7 +113,7 @@
               </div>
               <div class="card_info_lodging">
                 <h3 class="card_title_lodging">Hôtel des Mouettes</h3>
-                <p class="card_text_lodging">Nuit à partir de <span class="price">76€</span></p>
+                <p class="card_text_lodging">Nuit à partir de 76<span class="price">€</span></p>
                 <div class="star">
                   <i class="fas fa-star star_blue"></i>
                   <i class="fas fa-star star_blue"></i>
@@ -130,7 +130,7 @@
               </div>
               <div class="card_info_lodging">
                 <h3 class="card_title_lodging">Hôtel de la mer</h3>
-                <p class="card_text_lodging">Nuit à partir de <span class="price">46€</span></p>
+                <p class="card_text_lodging">Nuit à partir de 46<span class="price">€</span></p>
                 <div class="star">
                   <i class="fas fa-star star_blue"></i>
                   <i class="fas fa-star star_blue"></i>
@@ -164,7 +164,7 @@
               </div>
               <div class="card_info_lodging">
                 <h3 class="card_title_lodging">Hôtel chez Amina</h3>
-                <p class="card_text_lodging">Nuit à partir de <span class="price">96€</span></p>
+                <p class="card_text_lodging">Nuit à partir de 96<span class="price">€</span></p>
                 <div class="star">
                   <i class="fas fa-star star_blue"></i>
                   <i class="fas fa-star star_blue"></i>
@@ -191,7 +191,7 @@
               <div class="card_info_popular">
                 <div>
                   <h3 class="card_title_popular">Hôtel Le soleil du matin</h3>
-                  <p class="card_text_popular">Nuit à partir de <span class="price">128€</span></p>
+                  <p class="card_text_popular">Nuit à partir de 128<span class="price">€</span></p>
                 </div>
                 <div class="star">
                   <i class="fas fa-star star_blue"></i>
@@ -210,7 +210,7 @@
               <div class="card_info_popular">
                 <div>
                   <h3 class="card_title_popular">Au coeur de l'eau Chambres d'hôtes</h3>
-                  <p class="card_text_popular">Nuit à partir de <span class="price">71€</span></p>
+                  <p class="card_text_popular">Nuit à partir de 71<span class="price">€</span></p>
                 </div>
                 <div class="star">
                   <i class="fas fa-star star_blue"></i>
@@ -229,7 +229,7 @@
               <div class="card_info_popular">
                 <div>
                   <h3 class="card_title_popular">Hôtel Tout bleu et Blanc</h3>
-                  <p class="card_text_popular">Nuit à partir de <span class="price">68€</span></p>
+                  <p class="card_text_popular">Nuit à partir de 68<span class="price">€</span></p>
                 </div>
                 <div class="star">
                   <i class="fas fa-star star_blue"></i>
