Réparation de la barre de recherche

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <p>en plein centre ville ou en plein nature</p> 
       <div class="localisation">
           <div class="icon_map"><i class="fas fa-map-marker-alt"></i></div>
-          <div class="search_lodging" >Marseille, France</div>
+          <div  ><input class="search_lodging" placeholder="Marseille, France" ></div>
           <div class="btn">
             <a href="#">Rechercher</a>
             <i class="fas fa-search"></i>
