--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <p>en plein centre ville ou en plein nature</p> 
       <div class="localisation">
           <div class="icon_map"><i class="fas fa-map-marker-alt"></i></div>
-          <div  ><input class="search_lodging" placeholder="Marseille, France" ></div>
+          <div><input class="search_lodging" placeholder="Marseille, France" ></div>
           <div class="btn">
             <a href="#">Rechercher</a>
             <i class="fas fa-search"></i>
@@ -320,19 +320,19 @@
     <div class="footerbloc"> 
       <div class="propos">
         <h3>A propos</h3>
-        <p>Fonctionnement du site</p>
-        <p>Conditions générales de vente</p>
-        <p>Données et confidentialité</p>
+        <a href="">Fonctionnement du site</a>
+        <a href="">Conditions générales de vente</a>
+        <a href="">Données et confidentialité</a>
       </div>
       <div class="hebergement">
         <h3>Nos hébergements</h3>
-        <p>Charte qualité</p>
-        <p>Soumettre votre hôtel</p>
+        <a href="">Charte qualité</a>
+        <a href="">Soumettre votre hôtel</a>
       </div>
       <div class="assistance">
         <h3>Assistance</h3>
-        <p>Centre d'aide</p>
-        <p>Nous contacter</p>
+        <a href="">Centre d'aide</a>
+        <a href="">Nous contacter</a>
       </div>
     </div>   
   </footer>
